fix(dropdown): error focus state style alignment (#400)
* refactor(dropdown): updated classes to enable for runtime updates

* fix(dropdown): corrected the focus state for dropdown with error=true

* fix(dropdown): added focus to input element when icon is clicked

--- a/packages/core/src/components/dropdown/dropdown-filter.scss
+++ b/packages/core/src/components/dropdown/dropdown-filter.scss
@@ -81,6 +81,24 @@
       }
     }
 
+    &.error {
+      border-bottom: 1px solid var(--tds-negative);
+
+      &.focus {
+        border-bottom-color: transparent;
+
+        &::before {
+          content: '';
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          width: 100%;
+          height: 2px;
+          background: var(--tds-negative);
+        }
+      }
+    }
+
     input {
       flex: 1;
       all: unset;
